Enhance gallery with additional images
Added more images to the gallery section and updated the lightbox functionality.

--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
         <img src="img/IMG-20251103-WA0006.jpg" alt="Foto 6" onclick="openLightbox(this.src)">
         <img src="img/IMG-20251103-WA0008.jpg" alt="Foto 8" onclick="openLightbox(this.src)">
         <img src="img/IMG-20251103-WA0009.jpg" alt="Foto 9" onclick="openLightbox(this.src)">
+        <img src="img/IMG-20251103-WA0010.jpg" alt="Foto 10" onclick="openLightbox(this.src)">
+        <img src="img/IMG-20251103-WA0011.jpg" alt="Foto 11" onclick="openLightbox(this.src)">
+        <img src="img/IMG-20251103-WA0012.jpg" alt="Foto 12" onclick="openLightbox(this.src)">
+        <img src="img/IMG-20251103-WA0013.jpg" alt="Foto 13" onclick="openLightbox(this.src)">
+        <img src="img/IMG-20251103-WA0014.jpg" alt="Foto 14" onclick="openLightbox(this.src)">
+        <img src="img/IMG-20251103-WA0015.jpg" alt="Foto 15" onclick="openLightbox(this.src)">
+        <img src="img/IMG-20251103-WA0016.jpg" alt="Foto 16" onclick="openLightbox(this.src)">
+        <img src="img/IMG-20251103-WA0017.jpg" alt="Foto 17" onclick="openLightbox(this.src)">
+        <img src="img/IMG-20251103-WA0018.jpg" alt="Foto 18" onclick="openLightbox(this.src)">
       </div>
     </div>
   </section>
@@ -158,3 +167,4 @@
   </script>
 </body>
 </html>
+
